[package]
name = "yobicash-rs"
version = "0.1.0"
authors = ["Christian Nyumbayire <chritchens@gmail.com>"]
license = "MIT"
description = "Yobicash Rust Client"
repository = "https://github.com/yobicash/yobicash"
readme = "README.md"
keywords = ["cli", "cryptocurrency", "storage", "network", "p2p"]
categories = ["cryptography", "database", "network-programming"]

[dependencies]
semver = { version = "^0.9", features = ["serde"] }
chrono = { version = "^0.4", features = ["serde"] }
bytes = { version = "^0.4", features = ["serde"] }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
futures = "^0.1"
futures-await = "^0.1"
unqlite = "^1.3"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
libyobicash = { version = "^0.9", git = "https://github.com/yobicash/libyobicash" }

[[bin]]
name = "yobicashd"
path = "src/main.rs"
